--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-table": "^8.9.3",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "20.4.5",
@@ -41,6 +42,7 @@
     "next-cloudinary": "^4.18.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
